# IR2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
src/: IR_notebook.ipynb  embedder.py  lsh.py  main.py  storage.py
