[project]
name = "information_retrieval"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "annoy>=1.17.3",
    "bitarray>=3.8.0",
    "black==25.9.0",
    "gensim>=4.4.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
]
